--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <img
 
-        src="assets/images/illustration-article.svg"
+        src="images/illustration-article.svg"
 
         alt="abstract illustration"
 
@@ -61,7 +61,7 @@
 
         <div class="author">
 
-          <img src="assets/images/image-avatar.webp" alt="" />
+          <img src="images/image-avatar.webp" alt="" />
 
           <p>Greg Hooper</p>
 
