--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
           >Frontend Mentor</a
 
-        >. Coded by <a href="#">Manuel Guardia</a>.
+        >. Coded by <a href="#">@mr-harish-0706</a>.
 
       </div>
 
